Bug#3795; fixed DownloadPage alignment for Mainz style sheet.
svn: r16384

--- a/src/plugins/webstuff/css/Web_Mainz.css
+++ b/src/plugins/webstuff/css/Web_Mainz.css
@@ -609,10 +609,12 @@ table.individuallist tbody tr td.ColumnName a {
 #streetaddress {
     display:block;
 }
+#locality, .locality {
+    display: block;
+}
 #city:after {
     content:",";
 }
-#country {  }
 #email {
     display:block;
 }
